--- a/re-index.html
+++ b/re-index.html
@@ -48,6 +48,58 @@
             </div>
             </div>
         </nav>
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="images/cover/cover-1.png" class="d-block w-100 opacity-50" alt="...">
+                    <div class="carousel-caption d-none d-flex align-items-center d-md-block text-dark">
+                        <h1>Get Started Digital
+                            Learning</h1>
+
+                        <p>It is a long established fact that a reader will be distracted by the readable
+                            content of a page when looking at its layout.</p>
+                        <div> <button class="btn bg-primary text-white mb-5">Get Started</button> </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/cover/cover-2.jpg" class="d-block w-100 opacity-50" alt="...">
+                    <div class="carousel-caption d-none d-md-block text-success">
+                        <h1> Ami gulai a feleci</h1>
+                        <p>It is a long established fact that a reader will be distracted by the readable
+                            content of a page when looking at its layout.</p>
+                        <button class="btn bg-primary text-white mb-5">Get Started</button>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/cover/cover-3.jpg" class="d-block w-100  opacity-50" alt="...">
+                    <div class="carousel-caption d-none d-md-block text-primary">
+                        <h1> Ami gulai a feleci</h1>
+                        <p>It is a long established fact that a reader will be distracted by the readable
+                            content of a page when looking at its layout.</p>
+                        <button class="btn bg-primary text-white mb-5">Get Started</button>
+                    </div>
+
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
     </header>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
