--- a/re-index.html
+++ b/re-index.html
@@ -101,6 +101,94 @@
             </button>
         </div>
     </header>
+    <section class="w-25 container text-center mt-5">
+        <div>
+            <h1>Discover Our Popular Courses</h1>
+
+            <p>
+                It is a long established fact that a reader will be distracted by the readable content of apage when
+                looking at its layout
+
+            </p>
+
+        </div>
+    </section>
+
+    <main>
+        <section class="container-flud py-5 mx-3">
+            <div class="row g-2">
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                    <div class="d-flex align-items-center border rounded">
+                        <img src="images/course/course-1.png" alt="" class="img-fluid">
+                        <div class="w-50 ms-3">
+                            <h4>Fundamental Of UI/UX Design</h4>
+                            <p>Some quick example text to build on the card title
+                                and make up the bulk of the card</p>
+                            <h4 class="text-primary">Price : 20$</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                    <div class="d-flex align-items-center border rounded">
+                        <img src="images/course/course-2.png" alt="" class="img-fluid">
+                        <div class="w-50 ms-3">
+                            <h4>Javascript Basic to advanced</h4>
+                            <p>Some quick example text to build on the card title
+                                and make up the bulk of the card</p>
+                            <h4 class="text-primary">Price : 20$</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                    <div class="d-flex align-items-center border rounded">
+                        <img src="images/course/course-3.png" alt="" class="img-fluid">
+                        <div class="w-50 ms-3">
+                            <h2>Fullstack Web Development</h2>
+                            <p>Some quick example text to build on the card title
+                                and make up the bulk of the card</p>
+                            <h4 class="text-primary">Price : 20$</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                    <div class="d-flex align-items-center border rounded">
+                        <img src="images/course/course-4.png" alt="" class="img-fluid">
+                        <div class="w-50 ms-3">
+                            <h4>Digital Marketing</h4>
+                            <p>Some quick example text to build on the card title
+                                and make up the bulk of the card</p>
+                            <h4 class="text-primary">Price : 20$</h4>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                    <div class="d-flex align-items-center border rounded">
+                        <img src="images/course/course-5.png" alt="" class="img-fluid">
+                        <div class="w-50 ms-3">
+                            <h4>Photography Basic Rules</h4>
+                            <p>Some quick example text to build on the card title
+                                and make up the bulk of the card</p>
+                            <h4 class="text-primary">Price : 20$</h4>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                    <div class="d-flex align-items-center border rounded">
+                        <img src="images/course/course-6.png" alt="" class="img-fluid">
+                        <div class="w-50 ms-3 ">
+                            <h4>Motion Graphics</h4>
+                            <p>Some quick example text to build on the card title
+                                and make up the bulk of the card</p>
+                            <h4 class="text-primary">Price : 20$</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <br><br><br>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
