--- a/re-index.html
+++ b/re-index.html
@@ -190,7 +190,67 @@
     </main>
     <br><br><br>
 
+    <div class="d-flex justify-content-center">
+        <button class="btn bg-danger btn-lg rounded text-white mb-5">See More
+            Courses</button>
+    </div>
 
+
+
+    <section class="container bg-info rounded py-5 mb-5">
+        <div class="d-flex justify-content-center ms-5 ">
+            <div>
+                <h1>Ready to join?</h1>
+                <p class="w-75">It is a long established fact that a reader will be distracted by the
+                    readable content of a page when looking at its layout.</p>
+            </div>
+            <div class="ms-auto d-flex align-items-center">
+
+                <button type="button" class="btn text-success bg-white me-5">Register Now</button>
+            </div>
+        </div>
+    </section>
+
+    <section class="container">
+        <div class="w-50">
+            <h1>Meet Our Successfull
+                Students</h1>
+            <p>It is a long established fact that a reader will be distracted by the
+                readable content of a page when looking at its layout.</p>
+        </div>
+        <div class="row g-3">
+            <div class="col-lg-3 col-md-6 col-sm-12">
+                <div class="border rounded">
+                    <img src=" images/student/student-1.png" alt="" class="img-fluid">
+                    <h2>Awlad Hossain</h2>
+                    <p>UIUX Designer</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12">
+                <div class="border rounded">
+                    <img src=" images/student/student-2.png" alt="" class="img-fluid">
+                    <h2>Jannatul Islam</h2>
+                    <p>Motion Design</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12">
+                <div class="border rounded">
+                    <img src=" images/student/student-3.png" alt="" class="img-fluid">
+                    <h2>Imran Hossain</h2>
+                    <p>Graphic Designer</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12">
+                <div class="border rounded">
+                    <img src=" images/student/student-4.png" alt="" class="img-fluid">
+                    <h2>Nishi Akter</h2>
+                    <p>Web Developer</p>
+                </div>
+            </div>
+        </div>
+
+
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
