--- a/re-index.html
+++ b/re-index.html
@@ -251,6 +251,82 @@
 
 
     </section>
+
+    <section>
+        <div class="text-center my-5">
+            <div>
+                <h1>Frequently Asked Questions</h1>
+                <p class="mb-0">It is a long established fact that a reader will be distracted by the readable</p>
+                <p>content of a page when looking at its layout.</p>
+            </div>
+        </div>
+    </section>
+
+
+
+
+    <section class="text-center my-5">
+        <div>
+            <div class="dropdown">
+                <button class="w-50 btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                    aria-expanded="true">
+                    What are the difference between flexbox and grid?
+                </button>
+                <ul class="dropdown-menu">
+
+                    <p class="w-50"> Grid and flexbox. The basic difference between CSS Grid Layout and CSS
+                        Flexbox
+                        Layout
+                        is that flexbox was designed for layout in one dimension - either a row or a column. Grid was
+                        designed for two-dimensional layout - rows, and columns at the same time.</p>
+                </ul>
+            </div>
+            <div class="dropdown my-5">
+                <button class="w-50 btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                    aria-expanded="true">
+                    What are the difference between Bootstrap and Tailwind?
+                </button>
+                <ul class="dropdown-menu">
+
+                    <p class="w-50"> Bootstrap comes with a set of pre-styled responsive, mobile-first components that
+                        possess a definite UI kit. Tailwind CSS uses a set of utility classes to create a neat UI with
+                        more
+                        flexibility and uniqueness. Sites created using Bootstrap follow the generic pattern that makes
+                        them
+                        look identical</p>
+                </ul>
+            </div>
+            <div class="dropdown mb-5">
+                <button class="w-50 btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                    aria-expanded="true">
+                    What is CSS box model?
+                </button>
+                <ul class="dropdown-menu">
+
+                    <p class="w-50"> The CSS box model is a container that contains multiple properties including
+                        borders,
+                        margin, padding, and the content itself.
+                    </p>
+                </ul>
+            </div>
+            <div class="dropdown">
+                <button class="w-50 btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                    aria-expanded="true">
+                    What is a Semantic Tag?
+                </button>
+                <ul class="dropdown-menu">
+
+                    <p class="w-50"> The HTML semantics refers to the tags that provide meaning to an HTML page rather
+                        than
+                        just presentation. It makes HTML more comprehensible by better defining the different sections
+                        and
+                        layout of web pages.</p>
+                </ul>
+            </div>
+        </div>
+
+    </section>
+    <br><br><br>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
