--- a/re-index.html
+++ b/re-index.html
@@ -327,6 +327,24 @@
 
     </section>
     <br><br><br>
+
+    <section class="container-flud">
+        <div class="d-flex justify-content-around">
+
+            <div class="row">
+                <div class="col-lg-12 ">
+                    <div>
+                        <img src="images/company/company-1.png" alt="" class="me-5">
+                        <img src="images/company/company-2.png" alt="" class="me-5">
+                        <img src="images/company/company-3.png" alt="" class="me-5">
+                        <img src="images/company/company-4.png" alt="" class="me-5">
+                        <img src="images/company/company-5.png" alt="" class="me-5">
+                        <img src="images/company/company-6.png" alt="" class="me-5">
+                    </div>
+                </div>
+    </section>
+    <br><br><br>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
