--- a/re-index.html
+++ b/re-index.html
@@ -345,6 +345,22 @@
     </section>
     <br><br><br>
 
+    <footer>
+        <div class="bg-info text-white text-center d-flex flex-column align-items-center py-5">
+            <h2>Pro Edu</h2>
+            <p class="w-25"><small> 41, Zawaya Buildin, Ghala Muscat,Sultanate of Oman Privacy Ploicy | Terms of
+                    use</small></p>
+            <div class="d-flex">
+                <img class="me-4" src="images/facebook.svg" alt="">
+                <img class="me-4" src="images/twitter.svg" alt="">
+                <img class="me-4" src="images/instagram.svg" alt="">
+                <img class="me-4" src="images/google.svg" alt="">
+            </div>
+        </div>
+
+
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
