--- a/re-index.html
+++ b/re-index.html
@@ -27,7 +27,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Courses</a>
+                        <a class="nav-link active" href="#courses">Courses</a>
 
                     <li class="nav-item">
                         <a class="nav-link active">Peals</a>
@@ -59,8 +59,8 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="images/cover/cover-1.png" class="d-block w-100 opacity-50" alt="...">
-                    <div class="carousel-caption d-none d-flex align-items-center d-md-block text-dark">
+                    <img src="images/cover/cover-1.png" class="d-block w-100 opacity-75" alt="...">
+                    <div class="carousel-caption d-none d-flex align-items-center d-md-block text-white">
                         <h1>Get Started Digital
                             Learning</h1>
 
@@ -69,9 +69,9 @@
                         <div> <button class="btn bg-primary text-white mb-5">Get Started</button> </div>
                     </div>
                 </div>
-                <div class="carousel-item">
-                    <img src="images/cover/cover-2.jpg" class="d-block w-100 opacity-50" alt="...">
-                    <div class="carousel-caption d-none d-md-block text-success">
+                <div class="carousel-item" href="#courses-2">
+                    <img src="images/cover/cover-2.jpg" class="d-block w-100 opacity-75" alt="...">
+                    <div class="carousel-caption d-none d-md-block text-white">
                         <h1> Ami gulai a feleci</h1>
                         <p>It is a long established fact that a reader will be distracted by the readable
                             content of a page when looking at its layout.</p>
@@ -79,8 +79,8 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="images/cover/cover-3.jpg" class="d-block w-100  opacity-50" alt="...">
-                    <div class="carousel-caption d-none d-md-block text-primary">
+                    <img src="images/cover/cover-3.jpg" class="d-block w-100  opacity-75" alt="...">
+                    <div class="carousel-caption d-none d-md-block text-white">
                         <h1> Ami gulai a feleci</h1>
                         <p>It is a long established fact that a reader will be distracted by the readable
                             content of a page when looking at its layout.</p>
@@ -114,7 +114,7 @@
         </div>
     </section>
 
-    <main>
+    <main id="courses">
         <section class="container-flud py-5 mx-3">
             <div class="row g-2">
                 <div class="col-lg-6 col-md-6 col-sm-12">
@@ -206,7 +206,7 @@
             </div>
             <div class="ms-auto d-flex align-items-center">
 
-                <button type="button" class="btn text-success bg-white me-5">Register Now</button>
+                <button type="button" class="btn text-success bg-white me-5" id="courses-2">Register Now</button>
             </div>
         </div>
     </section>
